# Foraging_Swarm_Defense

./: README.md
CPFA/: .gitignore  .run.py  CMakeLists.txt  DoS.py  DoS_sim_test.py  DoS_xml_config.py  README.md  analysis.py  plot.py  plot_test.py  run.py  run_copy.py  test.txt  testslist  xml_config.py
CPFA/badresults_Exp3_v3_60it/: CPFA_st-0_R-cl_F-cl_r16_rfc108_ffc0_10by10_time900_iter60_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc15_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc25_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc40_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc45_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc50_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc55_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc5_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc60_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc65_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc70_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc75_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc80_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc85_DoSData.txt  CPFA_st-1_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc95_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc10_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc15_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc20_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc25_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc30_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc40_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc45_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc60_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc65_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc75_DoSData.txt  CPFA_st-2_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc95_DoSData.txt  CPFA_st-3_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_DoSData.txt  CPFA_st-3_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc10_DoSData.txt  CPFA_st-3_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc15_DoSData.txt  CPFA_st-3_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc20_DoSData.txt  CPFA_st-3_R-cl_F-cl_r16_rfc108_ffc108_10by10_time900_iter60_ffacc5_DoSData.txt  (+10 more)
CPFA/source/Base/: Attacker_Nest.cpp  Attacker_Nest.h  BaseController.cpp  CMakeLists.txt  Food.cpp  Food.h  Nest.cpp  Nest.h  Pheromone.cpp  Pheromone.h  QuarantineZone.cpp  QuarantineZone.h
(+548 files in other folders)
